# mysql-server

./: .gitignore
client/: CMakeLists.txt  mysqlbinlog.cc  mysqldump.c
mysys/: my_fstream.c
plugin/ha_plugin/: CMakeLists.txt  ha_plugin.cc  ha_plugin.h  ha_plugin_command.h  instance.cc  instance.h  master.cc  master.h  message.h  slave.cc  slave.h  triangle.cc  triangle.h
plugin/semisync/: CMakeLists.txt  semisync_slave_plugin.cc
plugin/semisync/semisync_slave_lib/: CMakeLists.txt  semisync_slave_plugin.cc  semisync_slave_plugin.h  virtual_slave.cc
plugin/semisync/virtual_slave/: CMakeLists.txt  semisync.h  semisync_slave.cc  semisync_slave.h  virtual_slave  virtual_slave.cc  virtual_slave.cnf  virtual_slave.h
plugin/semisync/virtual_slave/Config/: Config.cc  Config.h
plugin/semisync/virtual_slave/include/: welcome_copyright_notice.h
plugin/semisync/virtual_slave/src/: virtual_slave.cc  virtual_slave.h
plugin/semisync/virtual_slave/src/semisync/: semisync.h  semisync_slave_plugin.cc  semisync_slave_plugin.h
sql/: binlog.h  item_strfunc.cc  mysqld.cc  mysqld.h  sql_class.h  sql_lex.cc  sql_resolver.cc  sql_select.cc  sql_table.cc  sys_vars.cc
sql-common/: client.c
sql/share/: errmsg-utf8.txt
storage/innobase/btr/: btr0cur.cc
storage/innobase/buf/: buf0flu.cc
storage/innobase/handler/: ha_innodb.cc  handler0alter.cc
storage/innobase/include/: btr0btr.ic  btr0pcur.ic
storage/innobase/lock/: lock0lock.cc
storage/innobase/page/: page0cur.cc
storage/innobase/row/: row0log.cc  row0sel.cc
